--- a/src/index.css
+++ b/src/index.css
@@ -22,10 +22,10 @@ body {
 }
 
 nav {
-  height: 80px;
+  height: 150px;
   display: flex;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.05);
-  background-color: white;
+  background-color: rgb(198, 221, 252);
   position: relative;
 }
 
@@ -58,7 +58,7 @@ li {
 
 h1 {
   font-size: 56px;
-  color: #7342d6;
+  color: #001aff;
   margin-bottom: 24px;
   text-align: center;
 }
@@ -78,7 +78,7 @@ button:active {
 }
 
 .btn {
-  background-color: #7342d6;
+  background-color: #001aff;
   color: white;
   padding: 12px 24px;
   font-size: 20px;
@@ -87,11 +87,12 @@ button:active {
 }
 
 .purple {
-  color: #7342d6;
+  color: #001aff;
 }
 
 .logo {
-  width: 160px;
+  width: 120px;
+  border-radius: 25px;
 }
 
 .nav__container {
@@ -109,7 +110,7 @@ button:active {
   font-size: 20px;
   font-weight: bold;
   padding: 8px;
-  color: #7342d6;
+  color: #001aff;
 }
 
 .nav__list {
@@ -124,7 +125,7 @@ button:active {
 }
 
 .nav__link--primary {
-  border: 2px solid #7342d6;
+  border: 2px solid #001aff;
   border-radius: 4px;
 }
 
@@ -229,6 +230,7 @@ LANDING
 }
 
 header {
+  background-color: rgb(190, 216, 250);
   height: calc(100vh - 80px);
 }
 
@@ -472,7 +474,7 @@ footer {
 }
 
 .footer__logo--img {
-  width: 160px;
+  width: 120px;
   filter: grayscale(1) invert(1);
 }
 
