--- a/src/index.css
+++ b/src/index.css
@@ -829,3 +829,39 @@ select {
     padding-left: 0;
   }
 }
+
+/* added css */
+
+.input{
+    font-size: 20px;
+    width: 500px;
+    height: 48px;
+    margin-right: 30px;
+    border-radius: 50px 50px 50px 50px;
+    padding-left: 12px;
+}
+
+.btn{
+    font-size: 24px;
+    font-weight: bold;
+    padding: 12px 12px 12px 12px;
+    margin-right: 24px;
+    border-radius: 25px;
+    border: 1px solid grey;
+    background-color: #001aff;
+    color: white;
+    z-index: 1;
+}
+
+.click{
+    cursor: pointer;
+    transition: all 300ms ease;
+}
+
+.click:hover{
+    transform: scale(1.1);
+}
+
+.click:active{
+    transform: scale(0.8);
+}
